--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     <!-- MODAL LOGIN-->
     <div id="modal-login" class="modal-container flex">
         <div class="modal">
-            <button class="fechar">X</button>
+            <button class="fechar">&times;</button>
             <h2>Login</h2>
             <img src="img/palette.png" alt="tela">
             <form>
@@ -341,7 +341,7 @@
     <!--MODAL CADASTRO-->
     <div id="modal-cadastro" class="modal-container flex">
         <div class="modal register">
-            <button class="fechar">X</button>
+            <button class="fechar">&times;</button>
             <h2>Faça parte da comunidade Colorful Art</h2>
             <img src="img/tela.png" alt="paleta">
             <form>
