quiz em processo de desenvolvimento

--- a/html/artistas.html
+++ b/html/artistas.html
@@ -91,7 +91,7 @@
                     <button class="filtrar-search">
                         <img src="../img/filter.png" alt="filtrar pesquisa">
                     </button>
-                    ARTISTAS POR CATEGORIA
+                    ESCOLHA UMA CATEGORIA
                 </h2>
                 <hr>
                 <ul>
@@ -126,8 +126,8 @@
 
     <!--FRASE-->
     <div class="frase">
-        <q>A Arte diz o indizível, exprime o inexprimível, traduz o intraduzível.</q>
-        <span>Leonardo Da Vinci</span>
+        <q>Nenhum grande artista vê as coisas como realmente são. Caso contrário, deixaria de ser um artista.</q>
+        <span>Oscar Wilde</span>
     </div>
 
     <!--RODAPÉ-->
@@ -139,16 +139,19 @@
                         <h4>Obras</h4>
                         <ul>
                             <li>
-                                <a href="">Clássica</a>
+                                <a href="conteudo.html">Pintura</a>
                             </li>
                             <li>
-                                <a href="">Medieval</a>
+                                <a href="">Escultura</a>
                             </li>
                             <li>
-                                <a href="">Moderna</a>
+                                <a href="">Desenho</a>
                             </li>
                             <li>
-                                <a href="">Contemporânea</a>
+                                <a href="">Gravura</a>
+                            </li>
+                            <li>
+                                <a href="">Artesanato</a>
                             </li>
                         </ul>
                     </div>
