--- a/html/conteudo.html
+++ b/html/conteudo.html
@@ -52,36 +52,45 @@
         </div>
     </header>
     <main>
-        <div >
+        <div data-anime="left">
+            <!-- <div class="titulo-galeria container">
+                <h2>Pinturas</h2>
+                <hr>
+            </div> -->
             <div class="pinturas-galeria flex">
                 <div class="card-pesquisa">
                     <img src="../img/paintings/botticelli-nascimento-venus.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>O nascimento de Vênus (Botticelli)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>O nascimento de Vênus (Botticelli)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/Klimt-beijo.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>O beijo (Klimt)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>O beijo (Klimt)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/gogh-starry-night.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>A noite estrelada (Van Gogh)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>A noite estrelada (Van Gogh)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/munch-the-scream.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>O grito (Munch)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>O grito (Munch)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/magritte-filho-do-homem.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>O filho do homem (Magritte)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>O filho do homem (Magritte)</p>
                     </div>
                 </div>
             </div>
@@ -89,31 +98,36 @@
                 <div class="card-pesquisa">
                     <img src="../img/paintings/munch-amor-e-dor.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Amor e dor (Munch)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Amor e dor (Munch)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/vinci-monalisa.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Monalisa (Da Vinci)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Monalisa (Da Vinci)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/bellini-madonna-with-child.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Madonna with a child (Bellini)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Madonna with a child (Bellini)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/picasso-vieux.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Velho guitarrista cego (Picasso)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Velho guitarrista cego (Picasso)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/bouguereau-aurora.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>A Aurora (Bouguereau)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>A Aurora (Bouguereau)</p>
                     </div>
                 </div>
             </div>
@@ -121,31 +135,36 @@
                 <div class="card-pesquisa">
                     <img src="../img/paintings/duccio-maesta.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Maesta (Duccio)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Maesta (Duccio)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/gogh-noite-estrelado-sobre-rodano.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>A noite estrelada sobre ródano (Van Gogh)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>A noite estrelada sobre ródano (Van Gogh)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/munch-melancholy.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Melancholy (Munch)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Melancholy (Munch)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/picasso-jacqueline-com-flores.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Jacqueline com flores (Picasso)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Jacqueline com flores (Picasso)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/gogh-amendoeira-em-flor.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Amendoeira em flor (Van Gogh)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Amendoeira em flor (Van Gogh)</p>
                     </div>
                 </div>
             </div>
@@ -153,31 +172,36 @@
                 <div class="card-pesquisa">
                     <img src="../img/paintings/munch-kiss-by-the-window.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Kiss by the Window (Munch)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Kiss by the Window (Munch)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/da-forli-music-making-angel.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Music making angel (Da Forli)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Music making angel (Da Forli)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/dali-persistencia-da-memoria.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Persistencia da memória (Dali)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Persistencia da memória (Dali)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/grego-aquiles-ajax-jogando-damas.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Aquiles jogando ajax jogando damas (Arte na Grécia)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Aquiles jogando ajax jogando damas (Arte na Grécia)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/giotto-lamentation.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Lamentation (Giotto)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Lamentation (Giotto)</p>
                     </div>
                 </div>
             </div>
@@ -185,36 +209,48 @@
                 <div class="card-pesquisa">
                     <img src="../img/paintings/michelangelo-criacao-adao.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>A criação de Adão (Michelangelo)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>A criação de Adão (Michelangelo)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/monet-impressao.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Impressão, nascer do sol (Monet)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Impressão, nascer do sol (Monet)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/melozzo-da-forli-anjo.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>O Anjo (Da Forli)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>O Anjo (Da Forli)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/magritte-traicao-das-imagens.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>A traição das imagens (Magritte)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>A traição das imagens (Magritte)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
                     <img src="../img/paintings/magritte-les-amants.jpg" class="small_img">
                     <div class="hover-info flex">
-                        <i class="fas fa-heart"></i><p>Os Amantes (Magritte)</p>
+                        <i class="fas fa-heart"></i>
+                        <p>Os Amantes (Magritte)</p>
                     </div>
                 </div>
             </div>
         </div>
     </main>
+
+    <!--FRASE-->
+    <div class="frase">
+        <q>A arte de pintar é apenas a arte de exprimir o invisível através do visível.</q>
+        <span>Eugène Fromentin</span>
+    </div>
+
     <!--RODAPÉ-->
     <footer>
         <div class="rodape">
@@ -224,16 +260,19 @@
                         <h4>Obras</h4>
                         <ul>
                             <li>
-                                <a href="">Clássica</a>
+                                <a href="conteudo.html">Pintura</a>
                             </li>
                             <li>
-                                <a href="">Medieval</a>
+                                <a href="">Escultura</a>
                             </li>
                             <li>
-                                <a href="">Moderna</a>
+                                <a href="">Desenho</a>
                             </li>
                             <li>
-                                <a href="">Contemporânea</a>
+                                <a href="">Gravura</a>
+                            </li>
+                            <li>
+                                <a href="">Artesanato</a>
                             </li>
                         </ul>
                     </div>
@@ -270,23 +309,23 @@
                         <ul>
                             <li>
                                 <a href="https://www.facebook.com/giwkiss/" target="_blank">
-                                    <img src="../img/facebook.png" alt="">
+                                    <img src="../img/facebook.png" alt="facebook">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/nuvemexotica/?hl=pt-br" target="_blank">
-                                    <img src="../img/instagram.png" alt="">
+                                    <img src="../img/instagram.png" alt="instagram">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://twitter.com/NuvemExotica" target="_blank">
-                                    <img src="../img/twitter.png" alt="">
+                                    <img src="../img/twitter.png" alt="twitter">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.youtube.com/channel/UCc0SGr_WWw9t4iKfi2NP6KQ?view_as=subscriber"
                                     target="_blank">
-                                    <img src="../img/youtube.png" alt="">
+                                    <img src="../img/youtube.png" alt="youtube">
                                 </a>
                             </li>
                         </ul>
@@ -350,6 +389,7 @@
     <!--MODAL GALERIA PINTURAS-->
 
     <script src="../js/modal.js"></script>
+    <script src="../js/animacoes.js"></script>
 </body>
 
 </html>
