--- a/html/obras.html
+++ b/html/obras.html
@@ -90,39 +90,49 @@
                     <button class="filtrar-search">
                         <img src="../img/filter.png" alt="filtrar pesquisa">
                     </button>
-                    OBRAS POR PERÍODO HISTÓRICO
+                    ESCOLHA UMA CATEGORIA
                 </h2>
                 <hr>
                 <ul>
                     <li class="mov-card" data-anime="left">
                         <div class="mov-foto">
-                            <img src="../img/paintings/grego-aquiles-ajax-jogando-damas.jpg" alt="">
+                            <img src="../img/paintings/gogh-starry-night.jpg">
+                            <a href="../html/conteudo.html">
+                                <div class="mov-nome">
+                                    <h3>Pinturas</h3>
+                                </div>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="mov-card" data-anime="left">
+                        <div class="mov-foto">
+                            <img src="../img/michelangelo-pieta.jpg" alt="">
                             <div class="mov-nome">
-                                <h3>Arte na Antiguidade Clássica</h3>
+                                <h3>Esculturas</h3>
                             </div>
                         </div>
                     </li>
                     <li class="mov-card" data-anime="left">
                         <div class="mov-foto">
-                            <img src="../img/paintings/melozzo-da-forli-anjo.jpg" alt="">
+                            <img src="../img/draw.png" alt="">
                             <div class="mov-nome">
-                                <h3>Arte na Idade Média</h3>
+                                <h3>Desenhos</h3>
                             </div>
                         </div>
                     </li>
                     <li class="mov-card" data-anime="left">
                         <div class="mov-foto">
-                            <img src="../img/paintings/michelangelo-criacao-adao.jpg" alt="">
+                            <img src="../img/gravura.jpg" alt="">
                             <div class="mov-nome">
-                                <h3>Arte na Idade Moderna</h3>
+                                <h3>Gravuras</h3>
                             </div>
                         </div>
                     </li>
                     <li class="mov-card" data-anime="left">
                         <div class="mov-foto">
-                            <img src="../img/paintings/picasso-guernica.jpg" alt="">
+                            <img src="../img/KISS.jpg" alt="">
                             <div class="mov-nome">
-                                <h3>Arte na Idade Contemporânea</h3>
+                                <h3>Artesanatos</h3>
                             </div>
                         </div>
                     </li>
@@ -152,16 +162,19 @@
                         <h4>Obras</h4>
                         <ul>
                             <li>
-                                <a href="">Clássica</a>
+                                <a href="conteudo.html">Pintura</a>
                             </li>
                             <li>
-                                <a href="">Medieval</a>
+                                <a href="">Escultura</a>
                             </li>
                             <li>
-                                <a href="">Moderna</a>
+                                <a href="">Desenho</a>
                             </li>
                             <li>
-                                <a href="">Contemporânea</a>
+                                <a href="">Gravura</a>
+                            </li>
+                            <li>
+                                <a href="">Artesanato</a>
                             </li>
                         </ul>
                     </div>
